--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,9 +5,9 @@ import Card from "../components/Card.astro";
 
 <Layout title="Welcome to Astro.">
   <main>
-    <h1 class="text-center text-3xl font-bold">Test 123</h1>
+    <h1 class="text-center font-bold text-3xl">Test 123</h1>
     <Card body="some body" href="/oppskrifter" title="do NOT click!!!">
       Test object
     </Card>
   </main>
-</Layout>
+  </Layout>
