--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,9 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
+import NewCard from "../components/NewCard.astro";
 ---
 
-<Layout title="Welcome to Astro.">
-  <main>
-    <h1 class="text-center font-bold text-3xl">Test 123</h1>
-    <Card body="some body" href="/oppskrifter" title="do NOT click!!!">
-      Test object
-    </Card>
-  </main>
-  </Layout>
+<Layout tab_title="tab title" description="pls i try">
+  <p class="text-xl py-6">Dette er et arkiv over oppskrifter som Bente har samlet</p>
+</Layout>
