--- a/src/pages/oppskrifter/index.astro
+++ b/src/pages/oppskrifter/index.astro
@@ -2,22 +2,21 @@
 import Layout from "../../layouts/Layout.astro";
 import { getCollection } from "astro:content";
 
-// TODO: consider adding sorting and filters
 const oppskrifter = await getCollection("oppskrifter");
 ---
 
-<Layout title="Oppskrifter">
-  <main>
-    <section class="max-w-4xl">
-      <ul class="flex flex-col space-y-4 py-2">
-        {
-          oppskrifter.map((o) => (
-            <li class="text-lg font-semibold active:underline hover:underline border-1 border-red-400 border truncate rounded w-fit mx-auto px-4 py-2">
-              <a href={`/oppskrifter/${o.slug}`}>{o.data.title}</a>
-            </li>
-          ))
-        }
-      </ul>
-    </section>
-  </main>
+<Layout
+  tab_title="Oppskrifter"
+  description="Samling av oppskrifter"
+  page_title="Liste over alle oppskifter"
+>
+  <ul class="flex flex-col gap-2 py-2 sm:grid sm:grid-cols-2 xl:grid-cols-3">
+    {
+      oppskrifter.map((o) => (
+        <li class="text-lg font-semibold active:underline hover:underline rounded-full px-4 py-2 truncate ">
+          <a href={`/oppskrifter/${o.slug}`}>{o.data.title}</a>
+        </li>
+      ))
+    }
+  </ul>
 </Layout>
