--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Card from "../components/Card.astro";
-import NewCard from "../components/NewCard.astro";
 ---
 
 <Layout tab_title="tab title" description="pls i try">
-  <p class="text-xl py-6">Dette er et arkiv over oppskrifter som Bente har samlet</p>
+  <p class="text-xl py-6">
+    Dette er et arkiv over oppskrifter som Bente har samlet
+  </p>
 </Layout>
