minor styling and typos

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@ const today = new Date();
 <footer class="text-center">
   <hr class="h-px my-8 bg-gray-200 border-0" />
    &copy; {today.getFullYear()}
-  <span class="underline font-semibold"
+  <span class="underline font-semibold p-1"
     ><a href="https://github.com/Mordi490">Mordi</a></span
   >. All rights reserved.
 </footer>
