--- a/src/pages/oppskrifter/[...slug].astro
+++ b/src/pages/oppskrifter/[...slug].astro
@@ -2,6 +2,8 @@
 import { CollectionEntry, getCollection } from "astro:content";
 import RecipePost from "../../layouts/RecipePost.astro";
 
+export const prerender = true;
+
 export async function getStaticPaths() {
   const oppskrifter = await getCollection("oppskrifter");
   return oppskrifter.map((o) => ({
