center text & images

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -12,7 +12,7 @@ import { Image } from "astro:assets";
   description="Bakgrunn for siden"
   tab_title="Om Siden"
 >
-  <div class="max-w-4xl">
+  <div class="max-w-4xl mx-auto">
     <p>
       Min mor har alltid vært opptatt av baking og matlaging. Gjennom årene har
       hun samlet mange oppskrifter. Oppskriftene kan være klippet ut av
