--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,9 +8,9 @@ const total = oppskrifter.length;
 ---
 
 <Layout tab_title="Bentes Opskrifter" description="pls i try">
-  <p class="text-xl py-6">
+  <p class="text-xl py-6 text-center">
     Dette er et arkiv over oppskrifter som Bente har samlet.
   </p>
 
-  <h3>Det er totalt {total} oppskrifter</h3>
+  <h3 class="text-center">Det er totalt {total} oppskrifter</h3>
 </Layout>
