--- a/src/pages/oppskrifter/[...page].astro
+++ b/src/pages/oppskrifter/[...page].astro
@@ -8,7 +8,7 @@ import { PER_PAGE } from "../../const";
 
 export async function getStaticPaths({ paginate }: GetStaticPathsOptions) {
   const oppskrifter = await getCollection("oppskrifter");
-  return paginate(oppskrifter, { pageSize: 4 });
+  return paginate(oppskrifter, { pageSize: PER_PAGE });
 }
 
 interface Post {
