--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,6 +20,11 @@ const { tab_title, description, page_title } = Astro.props;
     <meta name="description" content="Astro description" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <script
+      defer
+      data-domain="bentesoppskrifter.no"
+      src="https://plausible.io/js/script.js"></script>
+
     <meta name="generator" content={Astro.generator} />
 
     <!-- Primary Meta Tags -->
