--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,7 +13,7 @@ const { tab_title, description, page_title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en" class="bg-slate-100">
+<html lang="no" class="bg-slate-100">
   <head>
     <!-- Global Metadata -->
     <meta charset="UTF-8" />
@@ -32,17 +32,19 @@ const { tab_title, description, page_title } = Astro.props;
     <meta name="title" content={tab_title} />
     <meta name="description" content={description} />
   </head>
-  <body class="flex flex-col h-screen">
-    <Header />
 
-    {
-      page_title && (
-        <h5 class="text-3xl font-bold text-center py-2">{page_title}</h5>
-      )
-    }
-    <main class="flex-grow px-1 mx-auto text-lg">
-      <slot />
-    </main>
-    <Footer />
+  <body>
+    <Header />
+    <div class="flex flex-col h-screen">
+      {
+        page_title && (
+          <h5 class="text-3xl font-bold text-center py-2">{page_title}</h5>
+        )
+      }
+      <main class="flex-grow px-1 mx-auto text-lg">
+        <slot />
+      </main>
+      <Footer />
+    </div>
   </body>
 </html>
