--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,6 @@
 ---
+import SearchBar from "../components/SearchBar.astro";
+import SearchWidget from "../components/SearchWidget.astro";
 import Layout from "../layouts/Layout.astro";
 import { getCollection } from "astro:content";
 
@@ -8,9 +10,13 @@ const total = oppskrifter.length;
 ---
 
 <Layout tab_title="Bentes Opskrifter" description="pls i try">
-  <p class="text-xl py-6 text-center">
-    Dette er et arkiv over oppskrifter som Bente har samlet.
-  </p>
+  <div class="flex flex-col text-center">
+    <p class="text-xl py-2">
+      Dette er et arkiv over oppskrifter som Bente har samlet.
+    </p>
 
-  <h3 class="text-center">Det er totalt {total} oppskrifter</h3>
+    <h3 class="italic text-base pb-4">Det er totalt {total} oppskrifter</h3>
+
+    <SearchWidget />
+  </div>
 </Layout>
