update index page description

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ const oppskrifter = await getCollection("oppskrifter");
 const total = oppskrifter.length;
 ---
 
-<Layout tab_title="Bentes Opskrifter" description="pls i try">
+<Layout tab_title="Bentes Opskrifter" description="En samling av oppskrifter">
   <div class="flex flex-col text-center">
     <p class="text-xl py-2">
       Dette er et arkiv over oppskrifter som Bente har samlet.
