wording on about page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -14,12 +14,12 @@ import { Image } from "astro:assets";
 >
   <div class="max-w-4xl mx-auto">
     <p>
-      Min mor har alltid vært opptatt av baking og matlaging. Gjennom årene har
-      hun samlet mange oppskrifter. Oppskriftene kan være klippet ut av
+      Bente har alltid vært opptatt av baking og matlaging, og gjennom årene har
+      det blitt samlet mange oppskrifter. Oppskriftene kan være ut klipp av
       magasiner, aviser, skrevet på ark eller handlelapper, utskrifter fra nett.
-      Men alt er skrevet på papir som lagres i en gammel, nokså nedslit <span
+      Men alt er skrevet på papir og oppbevares i en gammel, nokså nedslit <span
         class="italic">tidsskriftkassett</span
-      >. , eller så ligger de løst i posen med tidsskriftkassetten.
+      >. , eller så ligger de løst i en pose med tidsskriftkassetten.
     </p>
 
     <div class="flex justify-center pt-2 pb-4">
@@ -41,9 +41,9 @@ import { Image } from "astro:assets";
     </div>
 
     <p>
-      Riktig nok er de fleste i good stand, men uansett så kommer det en dag
-      hvor noen blir uleselige. Derav kommer behovet for denne siden. Et arkiv
-      over oppskriftene.
+      Riktig nok er de fleste i good stand, men uansett så er det kjekt å ha
+      muligheten til å søke digialt. Derav kommer behovet for denne siden. Et
+      digitalt arkiv over oppskriftene.
     </p>
   </div>
 </Layout>
