--- a/src/components/SearchBar.astro
+++ b/src/components/SearchBar.astro
@@ -23,10 +23,10 @@
   form?.addEventListener("submit", (e) => {
     e.preventDefault();
     const formData = new FormData(form);
-    console.log("bar: ", formData);
+    //console.log("bar: ", formData);
 
     const searchTerm = formData.get("search")?.toString();
-    console.log("bar: ", searchTerm);
+    //console.log("bar: ", searchTerm);
     if (!searchTerm || searchTerm.length === 0) return;
     const url = new URL("/search", window.location.origin);
     url.searchParams.set("q", searchTerm);
