--- a/src/pages/search.astro
+++ b/src/pages/search.astro
@@ -124,7 +124,7 @@ export const prerender = false;
   function generateSearchList(results: any) {
     return results
       .map((res: RecipeSearchResultItem) => {
-        console.log("searchRes: ", res);
+        //console.log("searchRes: ", res);
         const { slug, title } = res.item;
         return `<li class="text-lg font-semibold active:underline hover:underline rounded-full px-4 py-2 truncate">
                 <a href="/oppskrifter/${slug}">${title}</a>
