--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,9 +3,11 @@ import HeaderLink from "./HeaderLink.astro";
 ---
 
 <header>
-  <nav class="flex justify-around text-2xl bg-gray-400 py-2 mb-2">
-    <HeaderLink href="/">Hjem</HeaderLink>
-    <HeaderLink href="/oppskrifter">Oppskrifter</HeaderLink>
-    <HeaderLink href="/about">Om siden</HeaderLink>
+  <nav class="text-2xl bg-gray-400 py-2 mb-2">
+    <div class="max-w-3xl w-full mx-auto flex justify-around">
+      <HeaderLink href="/">Hjem</HeaderLink>
+      <HeaderLink href="/oppskrifter">Oppskrifter</HeaderLink>
+      <HeaderLink href="/about">Om siden</HeaderLink>
+    </div>
   </nav>
 </header>
