--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -7,7 +7,7 @@ const { prevUrl, nextUrl } = Astro.props;
     {
       prevUrl && (
         <a
-          class="bg-blue-700 hover:bg-blue-600 text-white font-semibold py-2 px-4 rounded"
+          class="bg-green-700 hover:bg-green-800 hover:shadow text-white font-semibold py-2 px-4 rounded border-2 border-gray-700"
           href={prevUrl}
         >
           Forrige Side
@@ -20,7 +20,7 @@ const { prevUrl, nextUrl } = Astro.props;
     {
       nextUrl && (
         <a
-          class="bg-blue-700 hover:bg-blue-600 text-white font-semibold py-2 px-4 rounded"
+          class="bg-green-700 hover:bg-green-800 hover:shadow text-white font-semibold py-2 px-4 rounded border-2 border-gray-700"
           href={nextUrl}
         >
           Neste Side
