--- a/src/components/Recipe.astro
+++ b/src/components/Recipe.astro
@@ -10,7 +10,7 @@ const { post, aboveTheFold } = Astro.props;
 
 <a href={`${BASE_RECIPE_URL}/oppskrifter/${post.slug}`}>
   <h2
-    class="text-lg font-semibold active:underline hover:underline rounded-full px-4 py-2 truncate first-letter:capitalize"
+    class="text-lg font-semibold active:underline hover:underline rounded-full px-4 py-2 first-letter:capitalize"
   >
     {post.data.title}
   </h2>
