--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,9 +3,8 @@ const today = new Date();
 ---
 
 <footer class="text-center">
-  <hr class="h-px my-8 bg-gray-400 border-0" />
+  <hr class="my-8 h-px border-0 bg-gray-400" />
    &copy; {today.getFullYear()}
-  <span class="underline font-semibold p-1"
-    ><a href="https://github.com/Mordi490">Mordi</a></span
-  >. All rights reserved.
+  <span class="p-1 font-semibold underline"><a href="https://github.com/Mordi490">Mordi</a></span>.
+  All rights reserved.
 </footer>
