--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,8 +3,8 @@ import HeaderLink from "./HeaderLink.astro";
 ---
 
 <header>
-  <nav class="text-2xl bg-gray-400 py-2 mb-2">
-    <div class="max-w-3xl w-full mx-auto flex justify-around">
+  <nav class="mb-2 bg-gray-400 py-2 text-2xl">
+    <div class="mx-auto flex w-full max-w-3xl justify-around">
       <HeaderLink href="/">Hjem</HeaderLink>
       <HeaderLink href="/oppskrifter">Oppskrifter</HeaderLink>
       <HeaderLink href="/about">Om siden</HeaderLink>
@@ -12,7 +12,7 @@ import HeaderLink from "./HeaderLink.astro";
         <span class="flex items-center">
           <span class="hidden sm:inline-flex">
             Søk
-            <span class="inline-flex items-center ml-1">
+            <span class="ml-1 inline-flex items-center">
               <svg
                 width="32"
                 height="32"
@@ -29,7 +29,7 @@ import HeaderLink from "./HeaderLink.astro";
             </span>
           </span>
           <span class="inline-flex sm:hidden">
-            <span class="inline-flex items-center ml-1">
+            <span class="ml-1 inline-flex items-center">
               <svg
                 width="32"
                 height="32"
