--- a/src/components/NewCard.astro
+++ b/src/components/NewCard.astro
@@ -7,7 +7,7 @@ interface Props {
 const { href, title } = Astro.props;
 ---
 
-<li class="flex rounded-lg bg-gray-500 px-4 py-2 shadow-lg leading-6 hover:bg-gray-600">
+<li class="flex rounded-lg bg-gray-500 px-4 py-2 leading-6 shadow-lg hover:bg-gray-600">
   <a href={href}>
     <h2 class="text-xl">
       {title}
