--- a/src/components/SearchBar.astro
+++ b/src/components/SearchBar.astro
@@ -5,12 +5,10 @@
 <aside class="flex justify-center py-2">
   <form>
     <div class="flex flex-col">
-      <label for="search" class="font-bold text-lg" aria-hidden="true"
-        >Søk etter oppskrift</label
-      >
+      <label for="search" class="text-lg font-bold" aria-hidden="true">Søk etter oppskrift</label>
     </div>
     <input
-      class="border-2 border-solid border-black rounded-lg px-4 py-2 text-lg text-gray-800 focus:outline-none focus:ring focus:border-blue-300"
+      class="rounded-lg border-2 border-solid border-black px-4 py-2 text-lg text-gray-800 focus:border-blue-300 focus:outline-none focus:ring"
       type="search"
       name="search"
       id="search"
