--- a/src/layouts/RecipePost.astro
+++ b/src/layouts/RecipePost.astro
@@ -12,7 +12,7 @@ const { title, tags, ingredienser, heroImage, tattFra } = Astro.props;
 ---
 
 <Layout description={`Oppskrift for: ${title}`} tab_title={title}>
-  <section class="prose prose-lg lg:prose-xl mx-auto py-4 px-2">
+  <section class="prose prose-lg mx-auto px-2 py-4 lg:prose-xl">
     {
       tattFra && (
         <p class="text-sm">
@@ -25,7 +25,7 @@ const { title, tags, ingredienser, heroImage, tattFra } = Astro.props;
     }
     <slot />
   </section>
-  <div class="flex flex-col gap-4 justify-center max-w-4xl">
+  <div class="flex max-w-4xl flex-col justify-center gap-4">
     {
       heroImage &&
         heroImage.map((img) => (
