--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,11 +10,9 @@ const total = oppskrifter.length;
 
 <Layout tab_title="Bentes Opskrifter" description="En samling av oppskrifter">
   <div class="flex flex-col text-center">
-    <p class="text-xl py-2">
-      Dette er et arkiv over oppskrifter som Bente har samlet.
-    </p>
+    <p class="py-2 text-xl">Dette er et arkiv over oppskrifter som Bente har samlet.</p>
 
-    <h3 class="italic text-base pb-4">Det er totalt {total} oppskrifter</h3>
+    <h3 class="pb-4 text-base italic">Det er totalt {total} oppskrifter</h3>
 
     <SearchBar />
   </div>
