--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,15 @@
 ---
+import { ViewTransitions } from "astro:transitions";
 import HeaderLink from "./HeaderLink.astro";
 ---
 
 <header>
+  <ViewTransitions />
   <nav class="mb-2 bg-gray-400 py-2 text-2xl">
-    <div class="mx-auto flex w-full max-w-3xl justify-around">
+    <div
+      transition:animate="none"
+      class="mx-auto flex w-full max-w-3xl justify-around"
+    >
       <HeaderLink href="/">Hjem</HeaderLink>
       <HeaderLink href="/oppskrifter">Oppskrifter</HeaderLink>
       <HeaderLink href="/about">Om siden</HeaderLink>
