--- a/src/layouts/RecipePost.astro
+++ b/src/layouts/RecipePost.astro
@@ -12,8 +12,9 @@ const { title, tags, ingredienser, images, tattFra } = Astro.props;
   <section class="prose prose-lg mx-auto px-2 py-4 lg:prose-xl">
     {
       tattFra && (
-        <p class="text-sm">
-          Denne oppskriften er fra eller basert på denne:{" "}
+        <p class="rounded bg-gray-300 p-2 text-base sm:w-5/6 md:w-2/3">
+          <span class="text-base font-bold">NB! </span>Denne oppskriften er fra
+          eller basert på denne:
           <span>
             <a href={tattFra}>{tattFra}</a>
           </span>
