--- a/src/components/Recipe.astro
+++ b/src/components/Recipe.astro
@@ -10,7 +10,7 @@ const { post, aboveTheFold } = Astro.props;
 
 <a href={`${BASE_RECIPE_URL}/oppskrifter/${post.slug}`}>
   <h2
-    class="rounded-full px-4 py-2 text-lg font-semibold first-letter:capitalize hover:underline active:underline"
+    class="px-4 py-2 text-lg font-semibold first-letter:capitalize hover:underline active:underline"
   >
     {post.data.title}
   </h2>
