--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -2,7 +2,11 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout description="Noe gikk galt" tab_title="Noe gikk galt" page_title="Oops, noe gikk galt">
+<Layout
+  description="Noe gikk galt"
+  tab_title="Noe gikk galt"
+  page_title="Oops, noe gikk galt"
+>
   <div class="py-4">
     <a
       href="/"
