--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,14 +7,19 @@ import ark2 from "../assets/about-images/web_slitt-ark-2.jpg";
 import ResponsiveImage from "../components/ResponsiveImage.astro";
 ---
 
-<Layout page_title="Om Siden" description="Bakgrunn for siden" tab_title="Om Siden">
+<Layout
+  page_title="Om Siden"
+  description="Bakgrunn for siden"
+  tab_title="Om Siden"
+>
   <div class="mx-auto max-w-4xl">
     <p>
-      Bente har alltid vært opptatt av baking og matlaging, og gjennom årene har det blitt samlet
-      mange oppskrifter. Oppskriftene kan være ut klipp av magasiner, aviser, skrevet på ark eller
-      handlelapper, utskrifter fra nett. Men alt er skrevet på papir og oppbevares i en gammel,
-      nokså nedslit <span class="italic">tidsskriftkassett</span>. , eller så ligger de løst i en
-      pose med tidsskriftkassetten.
+      Bente har alltid vært opptatt av baking og matlaging, og gjennom årene har
+      det blitt samlet mange oppskrifter. Oppskriftene kan være ut klipp av
+      magasiner, aviser, skrevet på ark eller handlelapper, utskrifter fra nett.
+      Men alt er skrevet på papir og oppbevares i en gammel, nokså nedslit <span
+        class="italic">tidsskriftkassett</span
+      >. , eller så ligger de løst i en pose med tidsskriftkassetten.
     </p>
 
     <div class="mx-auto flex max-w-lg justify-center pb-4 pt-2">
@@ -27,12 +32,15 @@ import ResponsiveImage from "../components/ResponsiveImage.astro";
     </div>
 
     <p>
-      Flere av oppskriftene er løse ark som blir gravd opp i ny og ne, noe som etter lang tid gjør
-      oppsriftene vanskeligere å lese. Blekk som blir utydeligere spm tiden går, flekker som kommer
-      på papirene, ark som blir revet, osv er de vanligste skrammene de får.
+      Flere av oppskriftene er løse ark som blir gravd opp i ny og ne, noe som
+      etter lang tid gjør oppsriftene vanskeligere å lese. Blekk som blir
+      utydeligere spm tiden går, flekker som kommer på papirene, ark som blir
+      revet, osv er de vanligste skrammene de får.
     </p>
 
-    <div class="flex max-w-4xl flex-col items-center gap-1 pb-4 pt-2 sm:flex-row sm:justify-around">
+    <div
+      class="flex max-w-4xl flex-col items-center gap-1 pb-4 pt-2 sm:flex-row sm:justify-around"
+    >
       <div class="sm:w-1/2">
         <ResponsiveImage
           src={ark1}
@@ -52,8 +60,9 @@ import ResponsiveImage from "../components/ResponsiveImage.astro";
     </div>
 
     <p>
-      Riktig nok er de fleste i good stand, men uansett så er det kjekt å ha muligheten til å søke
-      digialt. Derav kommer behovet for denne siden. Et digitalt arkiv over oppskriftene.
+      Riktig nok er de fleste i good stand, men uansett så er det kjekt å ha
+      muligheten til å søke digialt. Derav kommer behovet for denne siden. Et
+      digitalt arkiv over oppskriftene.
     </p>
   </div>
 </Layout>
