--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,8 +20,10 @@ const { tab_title, description, page_title } = Astro.props;
     <meta name="description" content="Astro description" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <script defer data-domain="bentesoppskrifter.no" src="https://plausible.io/js/script.js"
-    ></script>
+    <script
+      defer
+      data-domain="bentesoppskrifter.no"
+      src="https://plausible.io/js/script.js"></script>
 
     <meta name="generator" content={Astro.generator} />
 
@@ -34,7 +36,11 @@ const { tab_title, description, page_title } = Astro.props;
   <body>
     <Header />
     <div class="flex h-screen flex-col">
-      {page_title && <h5 class="py-2 text-center text-3xl font-bold">{page_title}</h5>}
+      {
+        page_title && (
+          <h5 class="py-2 text-center text-3xl font-bold">{page_title}</h5>
+        )
+      }
       <main class="mx-auto flex-grow px-1 text-lg">
         <slot />
       </main>
